--- a/package/package.json
+++ b/package/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@volcengine/tos-sdk": "^2.6.0",
     "ali-oss": "^6.17.1",
     "express": "^4.17.3",
     "js-md5": "^0.7.3",
